--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-<div>hello</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+	<link rel="stylesheet" href="style.css" type="text/css">
+	<meta charset="UTF-8">
+	<title>The Project</title>
+</head>
+<header>
+	<nav class="navbar navbar-default"></nav>
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="#">Karel Peeters</a>
+			</div>
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="index.html">The project</a></li>
+				<li><a href="commands.html">Commands</a></li>
+			</ul>
+		</div>
+	</nav>
+</header>
+<body>
+<div class="col-sm-2"></div>
+<div class="col-sm-8">
+	<h2>About the project</h2>
+	<article class="well well-lg">
+		<img src="img/bot_icon2.png" alt="cicero bot profile picture" class="pull-right">
+		<article>
+            This is a webpage detailing my github project "Cicero Bot". A bot written in python3 using the discord.py rewrite library.
+            It's purpose is providing various functionalities to the Rough Roman Memes discord server. Features include but are not limited to:
+            <ul>
+                <li>issue tracking system in the form of motions with the possibility to vote on them</li>
+                <li>monthly anonymous elections with focus on anonimity and protection from rigging methods such as VPN</li>
+                <li>unit conversions</li>
+                <li>rendering of various pie charts</li>
+                <li>various text commands</li>
+            </ul>
+        </article>
+
+		<br><br><br><br><br><br><br>
+	</article>
+</div>
+<div class="col-sm-2"></div>
+
+
+</body>
+</html>
