--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">Karel Peeters</a>
+				<a class="navbar-brand" href="#">Cicero Bot</a>
 			</div>
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="index.html">The project</a></li>
