--- a/commands.html
+++ b/commands.html
@@ -23,6 +23,11 @@
 			<ul class="nav navbar-nav">
                 <li><a href="index.html">The project</a></li>
 				<li class="active"><a href="commands.html">Commands</a></li>
+				<li>
+					<a href="rrf.html">
+						<img src="img/RRF_black.png" alt="The icon of the Rough Roman Memes discord server" style="max-width:50px; margin: -15px;">
+					</a>
+				</li>
 			</ul>
 		</div>
 	</nav>
